# Re_shellcode

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  changelog  changelog.md
.github/workflows/: rust.yml
benches/: my_benchmark.rs
shellcode_linux_x86/: shellcode-java.txt  shellcode-js.txt
src/: Re_shell_core.rs  err_and_log.rs  lib.rs  main.rs  match_args.rs  match_shellcodes.rs  shellcode_analyse.rs  sys_call.rs  win_api.rs
src/Re_shell_core/: a.out  err_and_log.rs  linux_system_frame.rs  match_args.rs  match_shellcodes.rs  shellcode_analyse.rs
src/sys_call/: sys_call_linux_32.rs  sys_call_linux_64.rs
src/sys_call/sys_call_linux_32/: _0_restart_syscall.rs  _102_socketcall.rs  _125_mprotect.rs  _361_bind.rs  _363_listen.rs  _367_getsockname.rs  _3_read.rs  _4_write.rs
src/sys_call/sys_call_linux_64/: _35_sys_nanosleep.rs  _41_sys_socket.rs  _42_sys_connect.rs  _60_sys_exit.rs  _9_sys_mmap.rs
test_doc/shellcode_linux_x64/: shellcode-rust.txt
test_doc/shellcode_linux_x86/: shellcode-bash.txt  shellcode-c.txt  shellcode-masm.txt  shellcode-perl.txt  shellcode-py.txt  shellcode-rust.txt  shellcode-vbs.txt
test_doc/shellcode_windows_x32/: shellcode_rust.txt
