[package]
name = "Reshellcode"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.0"
ansi_term = "0.12"
rand = "0.8.5"
capstone = "0.12.0"
criterion = "0.5.1"
crossterm = "0.28.1"
unicorn-engine = "2.1.1"
lazy_static = "1.5.0"

[[bench]]
name = "my_benchmark"
harness = false
