[package]
name = "Re_shellcode"
version = "0.3.4"
edition = "2021"
authors = ["dDostalker"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
rand = "0.8.5"
capstone = "0.12.0"
crossterm = "0.28.1"
unicorn-engine = "2.1.1"
lazy_static = "1.5.0"

